Stitched blobs support different sized component blobs (#1175)
Changed stitched blobs to work with blobs with different data content sizes. 
Introduces MetadataContent V3, which prefixes each chunk ID with a chunk
size.